# Token_Mechanism

./: scaffold.py
superapp-identity-platform/apps/identity-api/: Dockerfile  pyproject.toml
superapp-identity-platform/apps/identity-api/app/: main.py
superapp-identity-platform/apps/identity-api/app/auth/: deps.py  router.py  schemas.py  service.py
superapp-identity-platform/apps/identity-api/app/core/: config.py  rate_limit.py  security_headers.py
superapp-identity-platform/apps/identity-api/app/tokens/: claims.py  jwt.py  refresh_store.py
superapp-identity-platform/apps/identity-api/app/tokens/_keys/: jwt_private.pem  jwt_private_kid-1771827755.pem  jwt_private_kid-1771881882.pem  jwt_private_kid-1771884552.pem  jwt_public_kid-1771827755.pem  jwt_public_kid-1771827779.pem  jwt_public_kid-1771881882.pem  jwt_public_kid-1771884552.pem  kid.txt
superapp-identity-platform/apps/identity-api/tests/: test_auth_flow.py  test_jwks.py  test_protected_endpoint.py  test_refresh_rotation.py
superapp-identity-platform/infra/: docker-compose.yml
