[project]
name = "identity-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "pyjwt>=2.8",
  "cryptography>=42.0",
  "redis>=5.0",
  "passlib[bcrypt]>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]